--- a/dragonegg/TODO
+++ b/dragonegg/TODO
@@ -56,6 +56,10 @@ Consider turning this directly into the corresponding vector operations.
 Work in terms of units rather than octets (i8).  For example, if the target
 has a 16 bit byte, then use i16 for byte addressing.
 
+Convert GCC floating point register constants without "going through memory"
+(see TreeToLLVM::EmitRealRegisterConstant).
+
+
 Features
 --------
 
